--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ PROJECT(lfds)
 
 MESSAGE(STATUS "Building libldfs...")
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
-ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 # Have to create a dummy target here
-ADD_LIBRARY(lfds STATIC ${CMAKE_SOURCE_DIR}/src/.dummy.c)
+ADD_LIBRARY(lfds STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/.dummy.c)
 
 TARGET_LINK_LIBRARIES(lfds STATIC
 	btree
